fix the alignment

--- a/src/styles/Government.css
+++ b/src/styles/Government.css
@@ -110,7 +110,7 @@
   margin-bottom: 30px;
 }
 
-.step-number {
+.step-number-gov {
   width: 50px;
   height: 50px;
   background-color: #3a86ff;
@@ -121,7 +121,7 @@
   justify-content: center;
   font-size: 1.3rem;
   font-weight: bold;
-  margin-right: 20px;
+  margin: 0 17px 20px;
   flex-shrink: 0;
 }
 
